quick and dirty fix for globe container being too large

--- a/src/Pages/ADT3DScenePage/ADT3DScenePage.scss
+++ b/src/Pages/ADT3DScenePage/ADT3DScenePage.scss
@@ -40,6 +40,12 @@
         width: 100px;
     }
 
+    .cb-scene-page-scene-globe-container {
+        flex-grow: 1;
+        height: calc(100% - 40px);
+        overflow: hidden;
+    }
+
     .cb-scene-builder-and-viewer-container {
         flex-grow: 1;
         height: 100%;
